--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/nexa/.netbeans/26/build.properties
+user.properties.file=C:\\Users\\HP PC\\AppData\\Roaming\\NetBeans\\27\\build.properties
